# funchain

./: .gitignore  CHANGELOG.rst  MANIFEST.in  README.md  README.rst  funchain.toml  mypy.ini  setup.cfg  setup.py  tox.ini
funchain/: __init__.py  funchain.py
src/funchain/: funchain.py
tests/: test_islice.py
