[metadata]
name=funchain
url=http://github.com/eugenma/funchain
description=Functional processing for Python without the hassle of variable handling.
long_description=Functional processing for Python without the hassle of variable handling.
author=Eugen Massini
author_email=eugen@massini.de
license = MIT
classifiers=
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir=
    =src
packages=find:
include_package_data = True
setup_requires =
    setuptools_scm
tests_require =
    pytest
    funchain
python_requires = >=3.8

[options.entry_points]
console_scripts =
    fesg = fesg.commands:main


[options.packages.find]
where=src


[tool:pytest]
flake8-max-line-length = 120
[flake8]
per-file-ignores = __init__.py:F401
